Created a GameTerminal class which inherites the Game class in core